--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   
   <!-- Pagination -->
-  <link rel="stylesheet" href="{{ "/assets/pagination.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/pagination.css" | prepend: site.baseurl }}">
   
   <!-- Search -->
   <link rel="stylesheet" href="{{ "/css/search.css" | prepend: site.baseurl }}">
