--- a/css/pagination.css
+++ b/css/pagination.css
@@ -34,11 +34,11 @@
 }
 
 #page-prev {
-    background: url(icon_prev.png) no-repeat center;
+    background: url(../assets/icon_prev.png) no-repeat center;
     background-size: 6px 11px;
 }
 
 #page-next {
-    background: url(icon_next.png) no-repeat center;
+    background: url(../assets/icon_next.png) no-repeat center;
     background-size: 6px 11px;
 }
